# bomberup

./: Dockerfile  README.md  _config.yml  bomberup.cabal  cert.pem  index.md  key.pem
_layouts/: default.html
client/: .doit.db  LICENSE  package-lock.json  package.json
client/.elm-doc/: elm.json
client/.elm-doc/elm-stuff/0.19.1/: API.elmi  API.elmo  Game-Bot.elmi  Game-Bot.elmo  Utils.elmi  Utils.elmo
client/.elm-doc/src/: Main.elm  Utils.elm
client/.elm-doc/src/Game/: Bot.elm  Main.elm  Tutorial.elm
client/.elm-doc/src/Page/: Challenge.elm  Editor.elm  Play.elm  Tutorial.elm
client/.elm-doc/src/Page/Editor/Ui/: Editor.elm  (+2 more)
client/src/: API.elm  Main.elm
client/src/Game/: AI.elm  Draw.elm  Playground.elm  State.elm  Window.elm
client/src/Page/: Bot.elm  Ranking.elm  Tutorial.elm
client/src/Page/Editor/Data/: Problem.elm
client/src/Page/Editor/Ui/: ColumnDivider.elm  Editor.elm  Problem.elm
server/src/: API.hs  DB.hs  Main.hs
server/src/Game/: AI.hs  State.hs
static/: compileChaos.html  compileOk.html  editor.html  help.html  index.html
static/css/: editor-styles.css  page.css
static/docs/: search.json
static/docs/artifacts/: elm.js
static/docs/assets/fonts/: _hints_off.css  _hints_on.css
static/elm/: editor.js  game.js  main.js  tutorial.js
static/js/: editor-custom-elements.js
static/tutorial/: 1.html  2.html  3.html  4.html  5.html  6.html
templates/: .mustache  BotMain.elm  Idle.elm  cli.js  compileErrors.html  game.html  tutorial.html  tutorial1.elm  tutorial2.elm  tutorial3.elm  tutorial4.elm  tutorial5.elm  tutorial6.elm
(+1 files in other folders)
