
name:           bomberup
version:        0.0.0
build-type:     Simple

executable bomberup
  main-is: Main.hs
  other-modules:
      API
      DB
      Game.AI
      Game.State
      Paths_bomberup
  hs-source-dirs:
      server/src
  build-depends:
      aeson >= 2.2.1.0, base, text, shelly, containers, time, transformers, mtl, random, safe-exceptions, bytestring
    , elm-bridge, servant, servant-elm, servant-server, servant-auth-server, servant-multipart
    , wai, warp, warp-tls, http-media, mustache, vector
    , safecopy, acid-state, filepath, regex-tdfa, text-replace, binary, base64
  default-language: Haskell2010
